add start of page styling/formatting

--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        Build Your Pizza!
+        <br>
+        <select class="sizeOfPizza">
+          <option>Medium</option>
+          <option>Large</option>
+        </select>
+        <select class="cheese">
+          <option>Cheese</option>
+          <option>No Cheese</option>
+        </select>
+        <select class="pepperoni">
+          <option>Pepperoni</option>
+          <option>No Pepperoni</option>
+        </select>
+      </div>
+      <div class="col">
+        Your Current Order:
+        <br>
+        <p></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
