--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
       <div class="col">
         Build Your Pizza!
         <br>
-        <select class="sizeOfPizza">
-          <option>Medium</option>
-          <option>Large</option>
-        </select>
-        <select class="cheese">
-          <option>Cheese</option>
-          <option>No Cheese</option>
-        </select>
-        <select class="pepperoni">
-          <option>Pepperoni</option>
-          <option>No Pepperoni</option>
-        </select>
+        <form>
+          <label for="size-of-pizza">Size of Pie:</label>
+          <select class="form-control" id="size-of-pizza">
+            <option>Small ($11.45)</option>
+            <option>Medium ($12.95)</option>
+            <option>Large ($15.95)</option>
+          </select>
+          <label for="cheese-topping">Cheese:</label>
+          <select class="form-control" id="cheese-topping">
+            <option>Cheese</option>
+            <option>Extra Cheese</option>
+            <option>No Cheese</option>
+          </select>
+          <label for="pepperoni-topping">Pepperoni:</label>
+          <select class="form-control" id="pepperoni-topping">
+            <option>No Pepperoni</option>
+            <option>Pepperoni</option>
+            <option>Extra Pepperoni</option>
+          </select>
+          <br>
+          <button type="submit" class="btn btn-primary" id="add-pizza">Add Pizza!</button>
+        </form>
       </div>
       <div class="col">
         Your Current Order:
