add test userinput to UI

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
       <div class="col">
         Build Your Pizza!
         <br>
-        <form>
+        <form id="add-pizza">
           <label for="size-of-pizza">Size of Pie:</label>
           <select class="form-control" id="size-of-pizza">
-            <option>Small ($11.45)</option>
-            <option>Medium ($12.95)</option>
-            <option>Large ($15.95)</option>
+            <option value="Small">Small ($11.45)</option>
+            <option value="Medium">Medium ($12.95)</option>
+            <option value="Large">Large ($15.95)</option>
           </select>
           <label for="cheese-topping">Cheese:</label>
           <select class="form-control" id="cheese-topping">
-            <option>Cheese</option>
-            <option>Extra Cheese</option>
-            <option>No Cheese</option>
+            <option value="Cheese">Cheese</option>
+            <option value="Extra Cheese">Extra Cheese</option>
+            <option value="No Cheese">No Cheese</option>
           </select>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
-            <option>No Pepperoni</option>
-            <option>Pepperoni</option>
-            <option>Extra Pepperoni</option>
+            <option value = "No Pepperoni">No Pepperoni</option>
+            <option value="Pepperoni">Pepperoni</option>
+            <option value="Extra Pepperoni">Extra Pepperoni</option>
           </select>
           <br>
-          <button type="submit" class="btn btn-primary" id="add-pizza">Add Pizza!</button>
+          <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!</button>
         </form>
       </div>
       <div class="col">
