add setPizzaPrice functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <div class="col">
         Your Current Order:
         <br>
-        <p></p>
+        <ul id="pizza-list">
+          <li>First Pizza Test</li>
+        </ul>
       </div>
     </div>
   </div>
