add subtotals to end of order

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        Build Your Pizza!
+        <h3>Build Your Pizza!</h3>
         <br>
         <form id="add-pizza">
           <label for="size-of-pizza">Size of Pie:</label>
@@ -23,12 +23,14 @@
             <option value="Medium">Medium ($12.95)</option>
             <option value="Large">Large ($15.95)</option>
           </select>
+          <br>
           <label for="cheese-topping">Cheese:</label>
           <select class="form-control" id="cheese-topping">
+            <option value="No Cheese">No Cheese</option>
             <option value="Cheese">Cheese</option>
             <option value="Extra Cheese">Extra Cheese</option>
-            <option value="No Cheese">No Cheese</option>
           </select>
+          <br>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
             <option value = "No Pepperoni">No Pepperoni</option>
@@ -40,11 +42,14 @@
         </form>
       </div>
       <div class="col">
-        Your Current Order:
+        <h3>Your Current Order:</h3>
         <br>
         <ul id="pizza-list">
-          <li>First Pizza Test</li>
         </ul>
+        <hr>
+        <p>Subtotal: $<span id="subtotal"></span></p>
+        <p>Tax (0.03%): $<span id="tax"></span></p>
+        <p>Grand Total: $<span id="grand-total"></span></p>
       </div>
     </div>
   </div>
