add price adjustments to toppings

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
           <label for="cheese-topping">Cheese:</label>
           <select class="form-control" id="cheese-topping">
             <option value="No Cheese">No Cheese</option>
-            <option value="Cheese">Cheese</option>
-            <option value="Extra Cheese">Extra Cheese</option>
+            <option value="Cheese">Cheese (Free!)</option>
+            <option value="Extra Cheese">Extra Cheese (+$1.00)</option>
           </select>
           <br>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
             <option value = "No Pepperoni">No Pepperoni</option>
-            <option value="Pepperoni">Pepperoni</option>
-            <option value="Extra Pepperoni">Extra Pepperoni</option>
+            <option value="Pepperoni">Pepperoni (+$1.00)</option>
+            <option value="Extra Pepperoni">Extra Pepperoni (+2.00)</option>
           </select>
           <br>
           <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!</button>
