change wordage in selects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Papa Somebody's Pizza</title>
 </head>
 <body>
   <div class="container">
@@ -26,13 +26,13 @@
           <label for="cheese-topping">Cheese:</label>
           <select class="form-control" id="cheese-topping">
             <option value="No Cheese">No Cheese</option>
-            <option value="Cheese">Cheese (Free!)</option>
+            <option value="Add Cheese">Add Cheese (Free!)</option>
             <option value="Extra Cheese">Extra Cheese (+$1.00)</option>
           </select>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
             <option value = "No Pepperoni">No Pepperoni</option>
-            <option value="Pepperoni">Pepperoni (+$1.00)</option>
+            <option value="Add Pepperoni">Add Pepperoni (+$1.00)</option>
             <option value="Extra Pepperoni">Extra Pepperoni (+2.00)</option>
           </select>
           <br>
