--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">  
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Papa Somebody's Pizza</title>
 </head>
 <body>
@@ -15,29 +18,32 @@
     <div class="row">
       <div class="col" id="main">
         <h3>Build Your Pizza!</h3>
-        <br>
         <form id="add-pizza">
           <label for="size-of-pizza">Size of Pie:</label>
           <select class="form-control" id="size-of-pizza">
             <option value="Small">Small ($11.45)</option>
             <option value="Medium">Medium ($12.95)</option>
             <option value="Large">Large ($15.95)</option>
+            <option value="X-Large">X-Large ($18.95)</option>
           </select>
           <label for="cheese-topping">Cheese:</label>
           <select class="form-control" id="cheese-topping">
             <option value="No Cheese">No Cheese</option>
-            <option value="Add Cheese">Add Cheese (Free!)</option>
+            <option value="Add Cheese">Add Cheese</option>
             <option value="Extra Cheese">Extra Cheese (+$1.00)</option>
           </select>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
             <option value = "No Pepperoni">No Pepperoni</option>
             <option value="Add Pepperoni">Add Pepperoni (+$1.00)</option>
-            <option value="Extra Pepperoni">Extra Pepperoni (+2.00)</option>
+            <option value="Extra Pepperoni">Extra Pepperoni (+$2.00)</option>
           </select>
-          <br>
-          <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!</button>
+          <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!*</button>
         </form>
+        <p id="small-note">* Papa Somebody has not been granted permission from his parents to use sharp objects to cut vegetables, open cans or prepare other toppings other than the two listed here.</p>
+        <p id="small-note">** Pizzas, including toppings, are actually raw playdough. Do not eat.</p>
+        <p id="small-note">*** Papa Somebody is not, in fact, a papa. Play money will not be accepted.</p>
+        <p id="small-note">**** Here's another footnote.</p>
       </div>
       <div class="col" id="main">
         <h3>Your Current Order:</h3>
@@ -54,7 +60,7 @@
         <hr>
         <div class="totals">
           <p>Subtotal: $<span id="subtotal"></span></p>
-          <p>State Tax (0.03%): $<span id="tax"></span></p>
+          <p>State Tax (7.654321%): $<span id="tax"></span></p>
           <p>Grand Total: $<span id="grand-total"></span></p>
         </div>
       </div>
