add goldfish-crackers topping option

--- a/index.html
+++ b/index.html
@@ -34,21 +34,26 @@
           </select>
           <label for="pepperoni-topping">Pepperoni:</label>
           <select class="form-control" id="pepperoni-topping">
-            <option value = "No Pepperoni">No Pepperoni</option>
+            <option value="No Pepperoni">No Pepperoni</option>
             <option value="Add Pepperoni">Add Pepperoni (+$1.00)</option>
             <option value="Extra Pepperoni">Extra Pepperoni (+$2.00)</option>
+          </select>
+          <label for="goldfish-crackers-topping">Goldfish Crackers:</label>
+          <select class="form-control" id="goldfish-crackers-topping">
+            <option value="Add Goldfish">Add Goldfish (+$5.20)</option>
+            <option value="Extra Goldfish">Extra Goldfish (+$13.10)</option>
           </select>
           <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!*</button>
         </form>
         <p id="small-note">* Papa Somebody has not been granted permission from his parents to use sharp objects to cut vegetables, open cans or prepare other toppings other than the two listed here.</p>
         <p id="small-note">** Pizzas, including toppings, are actually raw playdough. Do not eat.</p>
         <p id="small-note">*** Papa Somebody is not, in fact, a papa. Play money will not be accepted.</p>
-        <p id="small-note">**** Here's another footnote.</p>
+        <p id="small-note">**** Papa Somebody insists that every pizza have goldfish crackers on it.</p>
       </div>
       <div class="col" id="main">
         <h3>Your Current Order:</h3>
           <div class="row">
-          <div class="col">
+          <div class="col-9">
             <ul id="order-list-pizza">
             </ul>
           </div>
