modify footnotes in main-left

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
           </select>
           <button type="submit" class="btn btn-primary" id="add-pizza-button">Add Pizza!*</button>
         </form>
-        <p id="small-note">* Papa Somebody has not been granted permission from his parents to use sharp objects to cut vegetables, open cans or prepare other toppings other than the two listed here.</p>
-        <p id="small-note">** Pizzas, including toppings, are actually raw playdough. Do not eat.</p>
-        <p id="small-note">*** Papa Somebody is not, in fact, a papa. Play money will not be accepted.</p>
-        <p id="small-note">**** Papa Somebody insists that every pizza have goldfish crackers on it.</p>
+        <p id="small-note">* Papa Somebody has not been granted permission from his parents to use sharp objects to cut vegetables, open cans or prepare other toppings other than the three listed here.</p>
+        <p id="small-note">** Papa Somebody is not, in fact, a papa. Play money will not be accepted.</p>
+        <p id="small-note">*** Papa Somebody insists that every pizza have goldfish crackers on it.</p>
       </div>
       <div class="col" id="main">
         <h3>Your Current Order:</h3>
